# ros-node-sim-in-gazebo

./: CMakeLists.txt  Dockerfile  README.md  build_docker_image.bash  mobicar.world  start_docker_image.bash
include/: mobicar_plugin.h  mobicar_ros_controller.h  stop_sign.h  vehicle.h
models/nava_mobicar/: model.config  model.sdf
src/: mobicar_plugin.cpp  mobicar_ros_controller.cpp  mobicar_ros_controller_main.cpp  stop_sign.cpp  vehicle.cpp
src/ros_sim_gz/: CMakeLists.txt  package.xml
src/ros_sim_gz/include/: mobicar_ros_controller.h  vehicle.h
src/ros_sim_gz/models/nava_mobicar/: model.sdf
src/ros_sim_gz/src/: mobicar_plugin.cpp  mobicar_ros_controller.cpp  vehicle.cpp
