<package format="2">
  <name>ros_sim_gz</name>
  <version>0.0.1</version>
  <description>Gazebo plugin and control node</description>

  <author email="vamshan@google.com">Navamshan Murugesapillai</author>

  <maintainer email="vamshan@yahoo.com">Navamshan Murugesapillai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

